--- a/day4/readme
+++ b/day4/readme
@@ -1,1 +1,3 @@
+https://app.relevanceai.com/agents/f1db6c/e82b82e6cfdf-46eb-8168-e2d4472beefd/b551da63-23d3-43ae-b2e3-ce4c2730163b/clone
 
+sharable link: https://app.relevanceai.com/agents/f1db6c/e82b82e6cfdf-46eb-8168-e2d4472beefd/b551da63-23d3-43ae-b2e3-ce4c2730163b/embed-chat?hide_tool_steps=false&hide_file_uploads=false&hide_conversation_list=false&bubble_style=agent&primary_color=%23685FFF&bubble_icon=pd%2Fchat&input_placeholder_text=Type+your+message...&hide_logo=false&hide_description=false
